package com.company.collection;

public enum MusicGanre {
    PROGRESSIVE_ROCK, RAP, BLUES, PUNK_ROCK;
}
