@startuml
'https://plantuml.com/sequence-diagram

class Main
together {
    class Request {
    }
    class Response {
    }
    abstract Message {
        String text
    }
    Request -|> Message
    Message <|- Response
}


Class Coordinates {
    - Double x
    - Double y
}
class Label {
    - long bands
}
enum MusicGanre {
    PROGRESSIVE_ROCK
    RAP
    BLUES
    PUNK_ROCK
}
class MusicBand {
    - Integer id
    - String name
    - Coordinates coordinates
    - java.time.LocalDate creationDate {auto}
    - int numberOfParticipants {>0}
    - long albumsCount {>0}
    - java.util.Date? establishmentDate
    - MusicGenre genre
    - Label label
}

Coordinates --* MusicBand::coordinates
Label -up-* MusicBand::label
MusicGanre --* MusicBand::genre

class MusicBandStorage #AAFFAA {
    - LinkedHashSet<MusicBand> storage
    - {auto} sort()

}

MusicBand -* MusicBandStorage
together {

    interface ICommand {
    }
    abstract class Command {
        - MusicBandStorage target
        - String cmdName {get}
        - String description {get}

        ~ Message exec()
    }
    object commands{
        + help()
        + info()
        + show()
        + add(MusicBand)
        + update_id(int id)
        + remove_by_id(int id)
        + clear()
        + save()
        + execute_script(String fileName)
        + exit()
        + add_if_max(MusicBand)
        + remove_greater(MusicBand)
        + history() //last 6
        + average_of_number_of_participants()
        + count_less_than_albums_count(long albumsCount)
        + print_ascending()
        + ...()
    }
}

commands -|> Command


class StorageManager #AAFFAA {
    - Queue history
    - Map<String, Command> commands
    - read() - ????
    + Bool validateCmd(String)
    + Message executeCmd(Message)
}

class JavaDoc << (J, #FFCC99)>> #FFDD99
class JSON << (J, #FFCC99)>> #FFDD99
Main .. JavaDoc: uses >
StorageManager .. JSON
MusicBandStorage .. JSON

Command --* StorageManager
(Command,StorageManager) - ICommand

MusicBandStorage -* StorageManager

StorageManager <-> Main : response/\n /request
Message .. (StorageManager,Main)

class java.io.InputStreamReader << (C, #EEAAAA) >> #EFCCCC
class java.io.PrintWriter << (C, #EEAAAA) >> #EFCCCC
Main o-up- java.io.InputStreamReader
Main o-up- java.io.PrintWriter


@enduml